# codeql-postproc

./: README.md  pyproject.toml
codeql_postproc/: cli.py
codeql_postproc/helpers/: codeql.py  sarif.py
